5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1594_1806.log
== SUBMITION (2019-04-23 16:00:02) 
-- CODE:
n = float(input("n:"))
from math import *
a=(factorial(365))
b=(factorial(365-n))
c=1/(365)**n
print(round(100*w,2))


-- EXECUTION TIME:
0.11742
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1806/main.py", line 6, in <module>
    print(round(100*w,2))
NameError: name 'w' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:00:40) 
-- CODE:
n = float(input("n:"))
from math import *
a=(factorial(365))
b=(factorial(365-n))
c=1/(365)**n
w=1-a/(b)*c
print(round(100*w,2))


-- EXECUTION TIME:
0.196471
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
